--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-medialibrary": "^9.11",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
