--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "magnific-popup": "^1.1.0"
+        "magnific-popup": "^1.1.0",
+        "xzoom": "^1.0.15"
     }
 }
