--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 
-RewriteEngine on
-RewriteCond %{REQUEST_URI} !^public
-
+<IfModule mod_rewrite.c>
+RewriteEngine On
 RewriteRule ^(.*)$ public/$1 [L]
+</IfModule>
 
 # php -- BEGIN cPanel-generated handler, do not edit
 # Set the “ea-php74” package as the default “PHP” programming language.
