--- a/.user.ini
+++ b/.user.ini
@@ -3,12 +3,13 @@
 ; To make changes to this file, use the cPanel MultiPHP INI Editor (Home >> Software >> MultiPHP INI Editor)
 ; For more information, read our documentation (https://go.cpanel.net/EA4ModifyINI)
 
-display_errors = Off
-max_execution_time = 30
-max_input_time = 60
+[PHP]
+display_errors = On
+max_execution_time = 1200
+max_input_time = 1200
 max_input_vars = 1000
-memory_limit = 32M
-post_max_size = 8M
+memory_limit = 256M
+post_max_size = 10M
 session.gc_maxlifetime = 1440
 session.save_path = "/var/cpanel/php/sessions/ea-php74"
 upload_max_filesize = 10M
